force-app/main/default/objects/WorkItemStatusConfig__c/WorkItemStatusConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Work Item Status Config</label>
</CustomObject>