force-app/main/default/objects/WorkItemStatusConfig__c/fields/Active_No_Tasks_Value__c.field-meta.xml
<CustomField>
    <fullName>Active_No_Tasks_Value__c</fullName>
    <label>Active No Tasks Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>