force-app/main/default/objects/WorkItemStatusConfig__c/fields/Active_Tasks_Available_Value__c.field-meta.xml
<CustomField>
    <fullName>Active_Tasks_Available_Value__c</fullName>
    <label>Active Tasks Available Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>