force-app/main/default/objects/WorkItemStatusConfig__c/fields/Inactive_Status_Values__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Status_Values__c</fullName>
    <label>Inactive Status Values</label>
    <type>TextArea</type>
</CustomField>